--- a/btlWin/Properties/Resources.resx
+++ b/btlWin/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="352137_sort_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icon\352137_sort_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="show" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icon\show.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
